--- a/school.css
+++ b/school.css
@@ -314,14 +314,14 @@ header a{
     height: 500px;
     width: 100%;
     display: grid;
-    grid-template-rows: repeat(1,1fr);
-    grid-template-columns: repeat(4, 1fr);
-    place-items: center;
-   
+    display: flex;
+    justify-content: space-around;
 }
 .card{
-    height: 80%;
-    width: 80%;
+    display: flex;
+    flex-direction: column;
+    height: 75%;
+    width: 20%;
     border-radius: 10px;
     border-radius: 15px;
     border: 2px solid black;
@@ -339,7 +339,7 @@ header a{
 
 .ptwo{
     margin-top: 3em;
-    margin-bottom: 0;
+    margin-bottom: 1em;
 }
 
 .ct{
@@ -351,12 +351,24 @@ header a{
     text-align: center;
     font-size: 20px;
 }
-@media only screen and (max-width: 1200px) {
-    .ct{
-        margin-top: 0;
-        font-size: 20px;
-    }
-    .ct1{
-        font-size: 18px;
-    }
+@media only screen and (max-width: 1000px) {
+   .cards{
+    flex-direction: column;
+    min-height: 100%;
+    
+   }
+   .card{
+    flex-direction: column;
+    min-height: 70%;
+    width: 40%;
+    margin: auto;
+    margin-bottom: 2em;
+   }
+   .ct{
+    margin-top: 0;
+    font-size: 27px;
+   }
+   .ct1{
+    font-size: 21px;
+   }
 }
