--- a/school.css
+++ b/school.css
@@ -334,7 +334,6 @@ header a{
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     box-shadow: 0px 0px 8px 0px black;
-    
 }
 
 .ptwo{
@@ -360,9 +359,12 @@ header a{
    .card{
     flex-direction: column;
     min-height: 70%;
-    width: 40%;
+    width: 65%;
     margin: auto;
     margin-bottom: 2em;
+   }
+   .gimg{
+    height: 70%;
    }
    .ct{
     margin-top: 0;
