--- a/school.css
+++ b/school.css
@@ -35,6 +35,7 @@ header a{
     font-weight: 650;
     margin-top: 16px;
     text-decoration: none;
+    color: #551A8B;
 }
 #rheader a span{
     font-size:19px;
@@ -58,6 +59,18 @@ header a{
 #lheader a{
     text-decoration: none;
     font-size: 25px;
+    color: #551A8B;
+}
+@media screen and (max-width: 1300px) {
+    #lheader a,#lheader button{
+        font-size: 20px;
+    }   
+    #header{
+        justify-content: space-between;
+    }
+    #rheader{
+        margin-left: 0;
+    }
 }
 #about{
     height: 100px;
@@ -163,11 +176,11 @@ header a{
     box-sizing: border-box; 
 }
 
+
 #title{
-    margin-top: 2em;
+    margin: 2em 0 1em 35%;
     font-size: 38px;
     color:navy;
-    margin-left: 45%; 
 }
 .subcontent{
     display:flex ;
@@ -181,13 +194,14 @@ header a{
     border-bottom-right-radius: 20px;
     border-top-right-radius: 20px;
 }
-.subcontent img{
-    height:450px;
-    width:400px ;
+#boy{
+    height: 25em;
+    width: 20em ;
     border: 3px solid black;
     border-top-left-radius: 60px;
     border-bottom-right-radius: 60px;
 }
+
 .para{
     font-size: 21px;
     line-height: 25px;
@@ -195,6 +209,20 @@ header a{
     text-align: center;
     word-wrap: normal;
     overflow: hidden;
+}
+
+@media only screen and (max-width: 1300px) {
+    .para{
+        line-height: 22px;
+        overflow: hidden;
+        text-align: justify;
+        margin-left: 10%;
+        font-size: 21px;
+    }
+    .subcontent{
+        border: none;
+        width: 90%;
+    }
 }
 
 .ptitle{
@@ -206,10 +234,10 @@ header a{
 }
 
 .slider {
-    padding-top: ;
+    /* padding-top: ; */
     width: 1300px;
     max-width: 100vw;
-    height: 500px;
+    height: 600px;
     margin: auto;
     position: relative;
     overflow: hidden;
@@ -308,16 +336,29 @@ header a{
     color: rgb(89, 9, 186);
     margin: auto;
     border-radius: 20px;
+    padding: 10px;
     margin-bottom: 30px;
 }
-.cards{
+/* .cards{
     height: 500px;
     width: 100%;
     display: grid;
     display: flex;
     justify-content: space-around;
+   
+} */
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    margin: 0 auto;
+    padding: 10px;
+    box-sizing: border-box;
 }
-.card{
+
+
+/* .card{
     display: flex;
     flex-direction: column;
     height: 75%;
@@ -326,6 +367,16 @@ header a{
     border-radius: 15px;
     border: 2px solid black;
     overflow: hidden;
+} */
+
+.card {
+    flex: 1 1 calc(33.33% - 16px);
+    background-color: #f0f0f0;
+    padding: 20px;
+    text-align: center;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    border-radius: 8px;
 }
 
 .gimg{
@@ -350,16 +401,19 @@ header a{
     text-align: center;
     font-size: 20px;
 }
+
 @media only screen and (max-width: 1000px) {
    .cards{
     flex-direction: column;
-    min-height: 100%;
-    
+    min-height:70%;
+    width: 90%;
+    margin-bottom: 2em;
+    overflow: hidden;
    }
    .card{
     flex-direction: column;
     min-height: 70%;
-    width: 65%;
+    width: 85%;
     margin: auto;
     margin-bottom: 2em;
    }
@@ -371,6 +425,180 @@ header a{
     font-size: 27px;
    }
    .ct1{
-    font-size: 21px;
+    font-size: 21px; 
    }
+}
+#mv{
+    /* height: 600px; */
+    width: 70%;
+    margin: auto;
+    margin-bottom: 2em;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+.mnv{
+    margin-top: 0;
+}
+.mission img{
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    
+}
+.mvp{
+    color: rgb(226, 77, 13);
+    font-size: 40px;
+}
+
+.mission{
+    display: flex;
+    align-items: center;
+}
+
+.mp{
+    border: 2px solid black;
+    border-radius: 15px;
+    min-height: 130px;
+    /* width: 70%; */
+    padding: 10px;
+    line-height: 30px;
+}
+
+.footer{
+    display: grid;
+    grid-template-rows: 1fr 1fr auto;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    /* min-height: 20vh;
+    height: 460px; */
+    border: 1px solid black;
+    background-color: rgba(8, 34, 104, 0.182);
+}
+
+.footer div:nth-child(5) {
+    grid-column: span 2;
+}
+.fcont{
+    display: flex;
+    margin-left: 5%;
+    /* align-items: center; */
+    margin-top: 4em;
+}
+
+.Society{
+    font-size: 65%;
+    margin-left: 55px;
+}
+
+.fcont p{
+    font-size: 35px;
+    line-height: 33px;
+    color: #551A8B;
+    font-weight: 630;
+}
+
+.footer img{
+    height: 8em;
+}
+
+.vidya{
+    margin-left: 25%;
+    font-size: 45%;
+    color: rgb(226, 77, 13);
+}
+
+iframe{
+    margin-top: 1em;
+    min-height: 250px;
+    width: 80%;
+    border: 2px solid black;
+    border-radius: 30px;
+}
+
+.add{
+    margin-left: 10px;
+}
+
+.add,.enq p{
+    font-size: 20px;
+}
+
+.enq{
+    display: flex;
+    justify-content: space-around;
+}
+
+.enq p{
+    margin-top: 2em;
+    font-size: 30px;
+    color: #421a8bcc;
+}
+
+.enq a{
+    text-decoration: none;
+    color: rgb(151, 54, 54);
+    font-size: 23px;
+}
+
+.copy{
+    border: 1px solid black;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(222, 129, 8);
+}
+.copy p{
+    margin-top: 8px;
+}
+
+.ico a{
+    margin-left: 15px;
+    margin-bottom: 5px;
+    border: 1px solid black;
+    border-radius: 50%;
+    padding: 4px;
+    color: black;
+    text-decoration: none;
+}
+
+@media only screen and (max-width: 1200px){
+    .enq p,.enq a{
+        font-size: 18px;
+    }
+}
+@media only screen and (max-width: 1300px){
+    .fcont p{
+        font-size: 20px;
+        line-height: 15px;
+        margin: auto;
+        margin-left: 0;
+    }
+
+    .fcont img{
+        margin:auto;
+        margin-right: 2%;
+    }
+}
+
+@media screen and (max-width: 907px){
+    
+    .fcont,iframe {
+            display: none !important;
+            visibility: hidden;
+            /* Fallback to ensure it's not visible */
+            opacity: 0;
+            /* Additional fallback */
+        }
+
+    .footer{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .add{
+        margin: auto;
+    }
+
 }
